# r-tree

./: .gitignore  CMakeLists.txt
include/spatialindex/: IdVisitor.h  SpatialIndex.h
src/: CMakeLists.txt
src/rtree/: BulkLoader.cc  BulkLoader.h  Index.cc  Index.h  Leaf.cc  Leaf.h  Node.cc  Node.h  PointerPoolNode.h  RTree.cc  RTree.h  Statistics.cc  Statistics.h
src/spatialindex/: IdVisitor.cc  IdVisitor.h  LineSegment.cc  LineSegment.h  Point.cc  Point.h  Region.cc  Region.h  SpatialIndex.cc  SpatialIndex.h
src/storagemanager/: Buffer.cc  Buffer.h  DiskStorageManager.cc  DiskStorageManager.h  MemoryStorageManager.cc  MemoryStorageManager.h  RandomEvictionsBuffer.cc  RandomEvictionsBuffer.h
src/tools/: PointerManager.h  Tools.cc  Tools.h  rand48.cc
test/: CMakeLists.txt
test/rtree/: Generator.cc  RTreeLoad.cc
